# fints-agent-cli

./: .gitignore  README.md  dkbfints.py  fints_agent_cli.py  providers.json  pyproject.toml
docs/: AGENT_RUNBOOK.md
skill/: SKILL.md
skills/fints-agent-cli-operator/: SKILL.md
tests/: test_dkbfints.py  test_fints_agent_cli.py
